--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/users1_schema
+spring.datasource.username=tmv
+spring.datasource.password=1234567
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.open-in-view=true
+#  Thymeleaf
+spring.thymeleaf.cache=true
+
+#
+server.port=8081
